2008-03-05  Satoshi Nakagawa <artension@gmail.com>

	Implemented drag and drop files on the member list to send files on dcc.

2008-03-04  Satoshi Nakagawa <artension@gmail.com>

	Added channel name completion.

2008-03-04  Satoshi Nakagawa <artension@gmail.com>

	Added /op, /deop, /halfop, /dehalfop, /voice, /devoice, /ban, /unban, /umode, /raw and /quote commands.
	Added aliases, /t for /topic and /leave for /part.

2008-03-04  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, numeric values should be capped when converting from ruby to objc.

2008-03-04  Satoshi Nakagawa <artension@gmail.com>

	Renamed /ctcpquery to /ctcp.
	Removed /ctcpping.

2008-03-04  Satoshi Nakagawa <artension@gmail.com>

	Added /j command to join a channel.
	Changed to complete '#' in the head of join commands.

2008-03-04  Satoshi Nakagawa <artension@gmail.com>

	Changed to not allow '?' at the end of URLs.

==== LimeChat 0.17 ====

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Fixed a wrong index bug when double clicked on the channel list dialog.

==== LimeChat 0.16.5 ====

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Moved the themes directory from '~/Library/LimeChat' to '~/Library/Application Support/LimeChat'.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Changed the default transcripts directory to '~/Documents/LimeChat Transcripts'.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	More smaller font for the member list.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Added "Reveal in Finder" menu item for receiving items on the dcc dialog.
	Changed for more robust way to draw the transfer lists on the dcc dialog.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, an item should be selected prior to starting edit on the startup dialog.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Assigned double click to reveal a file in Finder on the dcc receiving transfer list.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>
