@@ -1,5 +1,9 @@
 2008-03-05  Satoshi Nakagawa <artension@gmail.com>
 
+	Assigned enter key to send text on the paste dialog.
+
+2008-03-05  Satoshi Nakagawa <artension@gmail.com>
+
 	Implemented drag and drop files on the member list to send files on dcc.
 
 2008-03-04  Satoshi Nakagawa <artension@gmail.com>
